Replace localhost with the online host (Railway)

--- a/VU Spring Boot/src/main/resources/application.properties
+++ b/VU Spring Boot/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=VU
-spring.datasource.url=jdbc:mysql://localhost:3306/icu_management
+spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:48317/railway
 spring.datasource.username=root
-spring.datasource.password=hesham
+spring.datasource.password=qwxtmejrAqfCvFkEdQQsOWoqPJIDMbDB
 logging.level.org.springframework.jdbc.core=TRACE
