--- a/VU Spring Boot/src/main/resources/application.properties
+++ b/VU Spring Boot/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=VU
-spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:48317/railway
+spring.datasource.url=jdbc:mysql://localhost:3306/icu_management
 spring.datasource.username=root
-spring.datasource.password=qwxtmejrAqfCvFkEdQQsOWoqPJIDMbDB
+spring.datasource.password=hesham
 logging.level.org.springframework.jdbc.core=TRACE
+
